--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,5 +19,5 @@ jobs:
         uses: container-tools/kind-action@v1
       - name: Build ofn
         run: make build
-      - name: Install All
+      - name: Install all with ofn
         run: ./dist/ofn_linux_amd64 install --all
